# Compensate

./: README.md
aptos-contract/: Move.toml
aptos-contract/sources/: SimplePayroll.move  Verifier.move
circom-circuit/: commitment.circom  commitment.r1cs  commitment.sym  package.json
circom-circuit/commitment_cpp/: Makefile  commitment.cpp
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/api/: api.ts
frontend/app/: layout.tsx  page.tsx  provider.tsx
frontend/app/employee/: layout.tsx  page.tsx
frontend/components/: AddOrgFunds.tsx  EmployeeCardDetails.tsx  EmployeeHero.tsx  EmployerHero.tsx  Footer.tsx  Grid.tsx  Hero.tsx
frontend/components/ui/: AddEmployee.tsx  AddOrg.tsx  BentoGrid.tsx  EmployeeTable.tsx  EmployerBento.tsx  EmployerGraphs.tsx  EmployerTimeline.tsx  FloatingNav.tsx  Grid.tsx  GridGlobe.tsx  NavBar.tsx  ShimmerButton.tsx  TextGenerateEffect.tsx  Timeline.tsx  VerifyEmployee.tsx  WalletSelector.tsx  button.tsx  checkbox.tsx  dialog.tsx  form.tsx  input.tsx  progress.tsx
frontend/data/: index.ts
frontend/services/: read-services.ts  write-services.ts
frontend/state/: app.ts  hooks.ts  types.ts
frontend/utils/: graph-queries.ts  helper.ts
rust-crud-api/: Cargo.toml
rust-crud-api/src/: commitment.wasm  main.rs
