[package]
name = "rust-crud-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
mongodb = "2.3.1"
futures = "0.3"
tokio = { version = "1.28", features = ["full"] }
ark-circom = { git = "https://github.com/ragingrahul/circom-compat" }
ark-bn254 = "0.4.0"
ark-snark = "0.4.0"
ark-groth16 = { version = "0.4.0", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
num-bigint = { version = "0.4.3", default-features = false, features = ["rand"] }
ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"] }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
bcs = "0.1.4"
ark-relations = "0.4.0"
ark-serialize = "0.4.1"
ark-bls12-381 = "0.4.0"
ark-ec = { version = "0.4.1" }
ark-ff = { version = "0.4.1", features = ["asm"] }
sha2 = "0.10"
hex = "0.4.3"

thiserror = { version = "1.0.44", default-features = false }